# aioarubainstant

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
docs/: HOME_ASSISTANT_CODEX_PROMPT.md  PROJECT_NOTES.md  USAGE.md
scripts/: check_real_ap.py
src/aioarubainstant/: __init__.py  _transport.py  client.py  exceptions.py  models.py  parsers.py
tests/: __init__.py  test_client.py  test_models.py  test_package_metadata.py  test_parsers.py
tests/fixtures/: show_aps_8_6_wrapped.txt
